Bug 424272 - Shift+click does not bring xterm to foreground
Summary: Shift+click does not bring xterm to foreground
Status: VERIFIED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.19.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-16 06:17 UTC by Jiri Slaby
Modified: 2020-07-29 05:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jiri Slaby 2020-07-16 06:17:46 UTC
SUMMARY
When I shift-left-click on xterm with mouse, xterm is not made active and is not moved to foreground. This is a recent regression as it worked recently, likely with 5.19.0. My update history:
TO BE FILLED



Shift-click is used e.g. in vim with "set mouse=a" to not change the cursor position.

STEPS TO REPRODUCE
1. open xterm
2. change focus to some other window
3. shift-click on xterm

OBSERVED RESULT
xterm stays in background

EXPECTED RESULT
xterm should be in foreground and made active

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20200713
KDE Plasma Version: 5.19.3
KDE Frameworks Version: 5.71.0
Qt Version: 5.15.0
Kernel Version: 5.7.8-1.g8f507a0-default
OS Type: 64-bit
Processors: 4 × Intel® Core™ i7-6600U CPU @ 2.60GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa DRI Intel® HD Graphics 520
Comment 1 Jiri Slaby 2020-07-16 06:19:54 UTC
My update history:
https://paste.opensuse.org/12771815

It cannot be pasted here as bugzilla thinks it is spam (bug 424271).
Comment 2 Jiri Slaby 2020-07-16 06:24:58 UTC
(In reply to Jiri Slaby from comment #1)
> My update history:

Maybe this will work (replace X by .)?
2020-05-12 07:46:52|install|kwin5|5X18X5-1X1
2020-06-15 09:53:22|install|kwin5|5X19X0-1X1
2020-07-13 07:56:32|install|kwin5|5X19X2-1X1
2020-07-14 09:30:02|install|kwin5|5X19X3-1X1
Comment 3 Vlad Zahorodnii 2020-07-16 08:37:56 UTC
Thanks, I can reproduce it.
Comment 4 Bug Janitor Service 2020-07-16 11:05:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/122
Comment 5 Vlad Zahorodnii 2020-07-28 07:39:18 UTC
Git commit c8908fd0c215fd5fe7511e81c6f723163248fc5d by Vlad Zahorodnii.
Committed on 28/07/2020 at 07:21.
Pushed by vladz into branch 'Plasma/5.18'.

Grab all possible keyboard modifiers for window commands
FIXED-IN: 5.19.4

(cherry picked from commit 4921acf45a686f6c1af27e293f857d59db303339)
(cherry picked from commit dccf0ee456c05ecfac9773f9e1fce4dee2d57b10)

M  +44   -23   events.cpp
M  +2    -1    x11client.h

https://invent.kde.org/plasma/kwin/commit/c8908fd0c215fd5fe7511e81c6f723163248fc5d
Comment 6 Jiri Slaby 2020-07-29 05:43:16 UTC
Works for me. Thanks.