Grab all possible keyboard modifiers for window commands

BUG: 424272
FIXED-IN: 5.19.4

(cherry picked from commit 4921acf45a686f6c1af27e293f857d59db303339)
(cherry picked from commit dccf0ee456c05ecfac9773f9e1fce4dee2d57b10)